# chees_hot

./: partitions.csv
components/xl01/: CMakeLists.txt  xl01.c
components/xl01/include/: xl01.h
main/: CMakeLists.txt  app.c  app.h  main.c
main/ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h
main/ui/fonts/: MiSansBold_26.c  MiSansRegular_40.c
main/ui/images/: QR_code_image.c  backdown_image.c  blackchess_image.c  blue_image.c  but70X46.c  but85X46.c  c_clash_image.c  c_sc_image.c  cc_clash_image.c  cc_sc_image.c  cchess_image.c  chain_chees.c  check.c  checkerblack_image.c  chess_image.c  chinese_chess.c  clashofc_image.c  closeeye_image.c  count_image.c  demo.c  go_image.c  gomoku_image.c  graybg_image.c  home_image.c  keypad.c  lcbg_image.c  leftarr_image.c  lights.c  link_image.c  lock_imaeg.c  nation_chess.c  nc_sc_image.c  no_visiondemo.c  notice_image.c  notion_chees.c  openeye_image.c  pa_image.c  ratingblack_image.c  ratingyellow_image.c  redcchess_image.c  (+28 more)
main/ui/screens/: ui_about.c  ui_defaults.c  ui_factory.c  ui_language.c  ui_lights.c  ui_main.c  ui_menu.c  ui_menustrap.c  ui_netpassword.c  ui_netset.c  ui_newversion.c  ui_subm.c  ui_tating.c  ui_test_newversion.c  ui_unhappy.c  ui_updateing.c  ui_updateok.c  ui_username.c  ui_userswitch.c  ui_volume.c  ui_vs.c  ui_weiqitating.c
resources/fonts/: README.md
resources/images/: checkerwhite_image.c
