idf_component_register(SRCS 
                            "main.c"
                            "app.c"
                            "ui/ui.c"
                            "ui/ui_helpers.c"
                            "ui/screens/ui_main.c"
                            "ui/screens/ui_menu.c"
                            "ui/screens/ui_subm.c"
                            "ui/screens/ui_username.c"
                            "ui/screens/ui_userswitch.c"
                            "ui/screens/ui_menustrap.c"
                            "ui/screens/ui_netset.c"
                            "ui/screens/ui_netpassword.c"
                            "ui/images/demo.c"
                            "ui/images/no_visiondemo.c"
                            "ui/images/set_image.c"
                            "ui/images/title_image.c"
                            "ui/images/clashofc_image.c"
                            "ui/images/go_image.c"
                            "ui/images/gomoku_image.c"
                            "ui/images/graybg_image.c"
                            "ui/images/home_image.c"
                            "ui/images/lcbg_image.c"
                            "ui/images/leftarr_image.c"
                            "ui/images/c_sc_image.c"
                            "ui/images/cc_sc_image.c"
                            "ui/images/cchess_image.c"
                            "ui/images/chess_image.c"
                            "ui/images/wifi_image.c"
                            "ui/images/wpoint1_image.c"
                            "ui/images/wpoint2_image.c"
                            "ui/images/c_clash_image.c"
                            "ui/images/cc_clash_image.c"
                            "ui/images/nc_sc_image.c"
                            "ui/images/uncheck.c"
                            "ui/images/check.c"
                            "ui/images/QR_code_image.c"
                            "ui/images/link_image.c"
                            "ui/images/lock_imaeg.c"
                            "ui/images/white_image.c"
                            "ui/images/wifi0_image.c"
                            "ui/images/wifi1_image.c"
                            "ui/images/wifi2_image.c"
                            "ui/images/wifi3_image.c"
                            "ui/images/closeeye_image.c"
                            "ui/images/openeye_image.c"
                            "ui/images/keypad.c"

                            "ui/fonts/MiSansBold_26.c"
                            "ui/fonts/MiSansRegular_40.c"

                    INCLUDE_DIRS "."
                                 "ui")