idf_component_register(SRCS 
                            "main.c"
                            "app.c"
                            "ui/ui.c"
                            "ui/ui_helpers.c"
                            "ui/screens/ui_main.c"
                            "ui/screens/ui_menu.c"
                            "ui/screens/ui_subm.c"
                            "ui/screens/ui_username.c"
                            "ui/screens/ui_userswitch.c"
                            "ui/screens/ui_menustrap.c"
                            "ui/screens/ui_netset.c"
                            "ui/screens/ui_netpassword.c"
                            "ui/screens/ui_defaults.c"
                            "ui/screens/ui_volume.c"
                            "ui/screens/ui_about.c"
                            "ui/screens/ui_lights.c"
                            "ui/screens/ui_factory.c"
                            "ui/screens/ui_test_newversion.c"
                            "ui/screens/ui_newversion.c"
                            "ui/screens/ui_updateing.c"
                            "ui/screens/ui_updateok.c"
                            "ui/screens/ui_language.c"
                            "ui/screens/ui_tating.c"
                            "ui/screens/ui_weiqitating.c"
                            "ui/screens/ui_unhappy.c"
                            "ui/screens/ui_vs.c"
                            "ui/images/demo.c"
                            "ui/images/no_visiondemo.c"
                            "ui/images/set_image.c"
                            "ui/images/title_image.c"
                            "ui/images/clashofc_image.c"
                            "ui/images/go_image.c"
                            "ui/images/gomoku_image.c"
                            "ui/images/graybg_image.c"
                            "ui/images/home_image.c"
                            "ui/images/lcbg_image.c"
                            "ui/images/leftarr_image.c"
                            "ui/images/c_sc_image.c"
                            "ui/images/cc_sc_image.c"
                            "ui/images/cchess_image.c"
                            "ui/images/chess_image.c"
                            "ui/images/wifi_image.c"
                            "ui/images/wpoint1_image.c"
                            "ui/images/wpoint2_image.c"
                            "ui/images/c_clash_image.c"
                            "ui/images/cc_clash_image.c"
                            "ui/images/nc_sc_image.c"
                            "ui/images/uncheck.c"
                            "ui/images/check.c"
                            "ui/images/QR_code_image.c"
                            "ui/images/link_image.c"
                            "ui/images/lock_imaeg.c"
                            "ui/images/white_image.c"
                            "ui/images/wifi0_image.c"
                            "ui/images/wifi1_image.c"
                            "ui/images/wifi2_image.c"
                            "ui/images/wifi3_image.c"
                            "ui/images/closeeye_image.c"
                            "ui/images/openeye_image.c"
                            "ui/images/keypad.c"
                            "ui/images/lights.c"
                            "ui/images/slide_image.c"
                            "ui/images/volum_image.c"
                            "ui/images/notice_image.c"
                            "ui/images/updateing_image.c"
                            "ui/images/updateok_image.c"
                            "ui/images/ratingblack_image.c"
                            "ui/images/ratingyellow_image.c"
                            "ui/images/sun_image.c"
                            "ui/images/vs_image.c"
                            "ui/images/yellow_image.c"
                            "ui/images/but85X46.c"
                            "ui/images/checkerblack_image.c"
                            "ui/images/checkerwhite_image.c"
                            "ui/images/pa_image.c"
                            "ui/images/blue_image.c"
                            "ui/images/but70X46.c"
                            "ui/images/remorse_image.c"
                            "ui/images/stop_image.c"
                            "ui/images/backdown_image.c"
                            "ui/images/count_image.c"
                            "ui/images/unhappy_image.c"
                            "ui/images/redcchess_image.c"
                            "ui/images/whitecchess_image.c"
                            "ui/images/whitechess_image.c"
                            "ui/images/blackchess_image.c"


                            "ui/fonts/MiSansBold_26.c"
                            "ui/fonts/MiSansRegular_40.c"

                    INCLUDE_DIRS "."
                                 "ui")